<resources>
  <string name="app_name">AndroidSchedule</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>

  <!--MENU ACTIONS-->
  <string name="action_bookmarks">Bookmarks</string>
  <string name="action_student">Student</string>
  <string name="action_teacher">Teacher</string>
  <string name="action_group">Group</string>
  <string name="action_settings">Settings</string>
  <string name="action_about">About</string>

  <!--LOCALIZATION LANGUAGE-->
  <string name="lang_be" translatable="false">Беларуская</string>
  <string name="lang_ru" translatable="false">Русский</string>
  <string name="lang_en" translatable="false">English</string>

  <string name="lang_be_short" translatable="false">be</string>
  <string name="lang_ru_short" translatable="false">ru</string>
  <string name="lang_en_short" translatable="false">en</string>

  <string name="locale">@string/lang_en_short</string>

  <!--LOCALIZATION DAYS-->
  <plurals name="pref_title_days">
    <item quantity="one">%d day</item>
    <item quantity="other">%d days</item>
  </plurals>

  <!--SETTINGS SCREEN-->
  <string name="general_settings">GENERAL SETTINGS</string>
  <string name="pref_title_languages">Language</string>
  <string name="pref_title_dialog_choose_number">Select number of days</string>
  <string name="pref_title_number_of_days">Open schedule for</string>
  <string name="pref_title_last_schedule">Open last viewed schedule</string>
  <string name="pref_description_last_schedule">Allows last viewed schedule to be opened each time you launch the application</string>

  <!--ABOUT SCREEN-->
  <string name="title_about_open_url">GrSU official website</string>
  <string name="description_about_open_url">Open in browser</string>
  <string name="title_about_contact_developer">Contact developer</string>
  <string name="description_about_contact_developer">Write an Email</string>
  <string name="title_about_rate_app">Rate this app</string>
  <string name="description_about_rate_app">Open in Play Store</string>
  <string name="title_about_version_app">Version application</string>
  <string name="description_about_version_app">GrSU Schedule for Android v%s (build %d)</string>
</resources>
